css/shared.css
html,body{
  /* font-size: 1.1rem; */
  width: 100%;
  overflow-x: hidden;
  color: #fff;
  /* line-height: 1.6; */
  font-weight: 300;
}
h1, h2, h3{
  font-family: 'Montserrat', 'Montserrat';
  font-weight: 700!important;
  
}
a:hover{
  text-decoration: none;
  color: currentColor;
  text-shadow: 1px 1px 6px hsla(120, 100%, 50%, .6);
}

.h5{
  font-weight: 200!important;
}

p{
  font-family: 'quicksand', sans-serif;
}
.bg-black{
  background-color: #000;
}
.bg-secondary-nav{
  background-color: hsla(0,0%, 50%, .1);
}
.text-white{
  color: hsla(0, 0% , 100%, 1);
}
.localize-text{
  color: hsla(120, 100%, 50%, 1);
}
.optimize-text{
  color: hsla(180, 100%, 50%, 1);
}
.audit-text{
  color: hsla(60, 100%, 50%, 1);
}
.deploy-text{
  color: hsla(300, 100%, 50%, 1);
}


/* NAV */
.load-link{padding:0% 3%}
#load_l{
  color: hsla(120, 100%, 50%, .8);
  animation-name: colorl;
  animation-duration: 1.5s;
  margin-right: 0px;
}
@keyframes colorl {
  0%{color: hsl(120, 100%, 50%);}
  25%{color: hsl(180, 100%, 50%);}
  50%{color: hsl(60, 100%, 50%);}
  75%{color: hsl(300, 100%, 50%);}
  100%{color: hsl(120, 100%, 50%);}
}
#load_o{
  color: hsl(180, 100%, 50%, .8);
  animation-name: coloro;
  animation-duration: 1.5s;
}
@keyframes coloro {
  0%{color: hsl(180, 100%, 50%);}
  25%{color: hsl(60, 100%, 50%);}
  50%{color: hsl(300, 100%, 50%);}
  75%{color: hsl(120, 100%, 50%);}
  100%{color: hsl(180, 100%, 50%);}
}
#load_a{
  color: hsl(60, 100%, 50%, .8);
  animation-name: colora;
  animation-duration: 1.5s;
}
@keyframes colora {
  0%{color: hsl(60, 100%, 50%);}
  25%{color: hsl(300, 100%, 50%);}
  50%{color: hsl(120, 100%, 50%);}
  75%{color: hsl(180, 100%, 50%);}
  100%{color: hsl(60, 100%, 50%);}
}
#load_d{
  color: hsl(300, 100%, 50%, .8);
  animation-name: colord;
  animation-duration: 1.5s;

}
@keyframes colord {
  0%{color: hsl(300, 100%, 50%);}
  25%{color: hsl(120, 100%, 50%);}
  50%{color: hsl(180, 100%, 50%);}
  75%{color: hsl(60, 100%, 50%);}
  100%{color: hsl(300, 100%, 50%);}
}

/* BG */
.audit-logo-bg{
  width: 100%;
  position: relative;
  z-index: -1;
  padding: 0% 8%;
}
.audit-logo {
    position: absolute;
    z-index: 1;
    width: 38%;
    right: 32%;
    top: 17%
}


/* ul {
  list-style-type: square;
  margin-left: -5%;
  line-height: 1.3;
}
li {
  padding: 2% 0%;
}
 */
.header-text-padding{
  padding: 3% 0% 1% 0%;
}

/* SOCIAL ICONS */
.social-icon{
  padding: 0% 3%;
  background-color: transparent;
}

.fade-in{
  animation-name: fade;
  animation-duration: 5s;
  animation-fill-mode: forwards;
}
@keyframes fade {
  0% {opacity: 0%;}
  100% {opacity: 100%;}
}


.contop{
  padding-top: 4rem; 
}

.h1-padding{
  padding-top: 1rem;
}

.codebox{
  padding: 1% 0%;
  background-color: black;
  color: white;
  border: hsla(120, 100%, 50%, 0) 1.5px solid;
  white-space: nowrap;
  min-width: max-content;
}


.bg-aqua{
  padding: 3%;
  margin: 0% 1%;
  line-height:6.8;
}

.text-padding{
  padding-bottom: 1rem;
}

.checklist-padding{
  padding: 0% 32%;
}

.arjan-btn {
  padding: 8px 16px;
  font-size: 1.1rem;
  letter-spacing: 2px;
  border-radius: 0%;
}

.get-video{
  width: 100%;
  padding: 0rem 1rem;
}

.nav-logo{
  color:hsla(0, 0% , 100%, .9)
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.get-started {
  padding: 4% 0%;
  margin: 0% 0% 7% 0%;
}

.get-started-1 {
  padding: 0%;
}

@media(min-width:768px){
  .contop{
    padding-top: 5rem; 
  }
  .load-link{
    padding:0% 2%
  }
  .bg-aqua {
    padding: 3%;
    margin: 0% 18%;
    line-height: 6.8;
}
  .header-text-padding {
    padding: 3% 2% 1% 0%;
}
.audit-logo-bg {
  width: 100%;
  position: relative;
  z-index: -1;
  padding: 0% 2%;
}
.text-padding {
  padding-bottom: 2rem;
}

.audit-logo {
  position: absolute;
  z-index: 1;
  width: 43%;
  right: 30%;
  top: 17%;
}
.get-started {
  padding: 3% 1%;
  margin: 0% 0% 11% 0%;
}
.get-started-1 {
  margin: 0% 2%;
}
.get-video {
  max-width: 350px;
}
.checklist-padding{
  padding: 0% 19%;
  margin: -9% 0%;

}
}


@media(min-width:992px){
  .social-row{
    position: fixed;
    right: 3%;
    bottom: 7%;
  }
  .social-icon{
    padding: 15% 0%;
  }
  .header-text-padding {
    padding: 3% 8% 1% 0%;
}
.bg-aqua {
  padding: 3%;
  margin: 0% 25%;
  line-height: 6.8;
}
.audit-logo-bg {
  width: 100%;
  position: relative;
  z-index: -1;
  padding: 0% 8%;
}
.audit-logo {
    position: absolute;
    z-index: 1;
    width: 40%;
    right: 32%;
    top: 18%;
}
.h1-padding{
  padding-top: 2rem;
}
.get-started {
  padding: 3% 1%;
  margin: 0% 0% 7% 0%;
}
.get-started-1 {
  margin: 0% 10%;

}
.checklist-padding{
  padding: 0% 28%;
  margin: -6% 0%;
}
}

